--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<body style="background-color:blue   ">
+<title>Швидка швидкість</title><body style="background-color:blue   ">
 <h1 style="text-align:center;color:black;font-size:100px"> Швидка швидкість </h1>
 <h2 style="text-align:center;color:black;font-size:60px"> Міні Вікторина по транспортним засобам </h2>
 <table>                                                    
